package de.sswis.controller;

import de.sswis.model.Simulation;
import de.sswis.view.AbstractMainView;

/**
 * Benachrichtigt die View über beendete {@code Simulationen}. Wird eine Simulation beendet benachrichtigt dieser
 * {@code SimulationObserver} die View. Dazu wird die entsprechende {@code Simulation} im Hauptfenster als
 * abgeschlossen markiert.
 *
 * @author Max Braun
 */
public class ViewNotifier implements SimulationObserver {

    private AbstractMainView mainView;

    /**
     * Konstruktor von {@code ViewNotifier}
     * @param mainView das Hauptfenster, das benachrichtigt wird
     */
    public ViewNotifier(AbstractMainView mainView) {

    }

    @Override
    public void update(Simulation sim) {

    }
}
